Change log for duff
===================

Maintained since version 0.3.1.

2012-01-23  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffdriver.c (process_args): Added function.
 * duffdriver.c (process_path, report_clusters): Made private to duffdriver.
 * duff.c duffdriver.c: Moved argument processing to duffdriver.
 * duffentry.c (fill_entry): Renamed function from make_entry.
 * duffdriver.c (free_entry_list): Removed function.
 * duffdriver.c: Replaced doubly linked lists with List.
 * duffutil.c (entry_list_init, entry_list_alloc, entry_list_empty,
 entry_list_free): Added entry list functions.
 * duffutil.c (link_entry, unlink_entry): Removed functions.
 * duff.h (List): Added linear entry list struct and typedef.
 * duff.h (Entry): Removed list links.
 * duff.c (main): Saved header digest use before processing entries.
 * duff.c (header_uses_digest): Added global flag.
 * duffentry.c (report_cluster): Ensured that first cluster entry has digest.
 * duffentry.c (compare_entries): Added more early-out cases.
 * duffentry.c (get_entry_digest): Stopped reading empty files.
 * duffentry.c (generate_entry_digest): Added function.
 * duffentry.c (get_entry_digest): Hash sample if it contains entire file.
 * duffutil.c (error, warning): Prefixed program name to output.
 * duffutil.c (set_digest_function): Added function.
 * duffutil.c (digest_init): Added function.
 * duffutil.c (digest_update): Added function.
 * duffutil.c (digest_finish): Added function.
 * duff.c duffutil.c duffentry.c: Moved all calls to sha to duffutil.
 * duff.c duffutil.c duffentry.c: Made digest_function private to duffutil.
 * duff.1 duff.c: Changed default sampling limit to zero.

2012-01-22  Camilla Berglund  <elmindreda@elmindreda.org>

 * duff.c duff.h duffentry.c: Changed sampling to read (up to) the first
 SAMPLE_SIZE bytes (credits to Kamal Mostafa).
 * duff.c: Clarified help for -H and -L flags.
 * duff.c: Added list of supported digest functions to help for -d flag.
